fixing the ul so that it has list-style-types and spacing for the case if someone makes a static text portlet with a ul-li

--- a/ploneorg/theme/theme/sass/main.scss
+++ b/ploneorg/theme/theme/sass/main.scss
@@ -129,3 +129,16 @@ section.sec-community ul {
 }
 
 .plone-breadcrumb {margin-top: 0px;}
+
+.portlet .portletContent > ul {
+  list-style: inside disc;
+}
+.portletStaticText ul {
+  font-size: 14px;
+  font-weight: 400;
+  li {
+    color: #6b808c;
+    margin: 0;
+    padding: 10px 15px;
+  }
+}
